maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	droite()
    while(!estSurBiscuit)
    {
    random2()
    		if(!estFaceMur)
    		{
    			avance()
    		}
		if(estFaceMur)
		{
    			if(random2() == 0)
    			{
    				gauche()
    			}
    			if(random2() == 1)
    			{
    				droite()
    			}
		}
    }
}
